<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>first_pkg</name>
  <version>2.1.2</version>
  <description>
    First Package tried. Publisher-subscriber
  </description>
  <maintainer email="iranzulezaun@yahoo.es">Iranzu Lezaun Eusa</maintainer>
  <license>Apache 2.0</license>
  
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
